fixes spilling page

--- a/stock_frontend/src/styles/HomepageStyle.css
+++ b/stock_frontend/src/styles/HomepageStyle.css
@@ -3,7 +3,7 @@
     justify-content: space-evenly;
     background-color: #373F51;
     padding-top: 200px;
-    padding-bottom: 500px;
+    padding-bottom: 200px;
 }
 
 .homepage img {
